django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dj-test-deployment
  labels:
    app.kubernetes.io/name: k8s-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-test
    spec:
      containers:
      - name: dj-container
        image: docker.io/library/django_app
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: dj-test-svc
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: k8s-test
