django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: k8s-test
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dj-test-svc
                port:
                  number: 80
